@startuml

entity Person {

  *FirstName
  *LastName
  *Email
  *Phone
  *ZipCode
  *Hobbies
  *DateOfBirth
  *Address
  *Gender

}

entity ZipCode{
    *ZipCode
    *City
    *regionName
    *municipality
    }

entity Hobby
{
    *Name
    *WikiLink
    *Category
    *Type
}

Person "many"--"1" ZipCode
Person "many"--"many" Hobby

@enduml